<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">商城APP</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_spproduct_detail_inner">SPProductDetailInnerActivity</string>
    <string name="title_activity_spconfirm_order">SPConfirmOrderActivity</string>
    <string name="digate_1">12</string>
    <string name="tab_item_home">商城</string>
    <string name="tab_item_category">分类</string>
    <string name="tab_item_shopcart">购物车</string>
    <string name="tab_item_mine">我的</string>
    <string name="text_item_category">分类</string>
    <string name="text_item_shopcart">购物车</string>
    <string name="text_item_order">我的订单</string>
    <string name="text_item_coupon_center">领券中心</string>
    <string name="text_item_integral_mall">积分商城</string>
    <string name="text_item_group">团购</string>
    <string name="text_item_coupon">优惠券</string>
    <string name="text_item_promotion">优惠活动</string>
    <string name="text_item_collect">我的收藏</string>
    <string name="text_item_store_street">店铺街</string>
    <string name="text_item_brand_street">品牌街</string>
    <string name="text_item_message">消息</string>
    <string name="text_item_person">用户中心</string>
    <string name="text_item_flash_sale">抢购</string>
    <string name="home_menu_first">限时抢购</string>
    <string name="home_menu_sec">新品</string>
    <string name="home_menu_third">推荐</string>
    <string name="home_menu_fourth">充值</string>
    <string name="home_title_quality">精品推荐</string>
    <string name="home_title_new">新品上市</string>
    <string name="home_title_hot">热销商品</string>
    <string name="product_price">¥%1$2.2f</string>
    <string name="sort_composite">综合</string>
    <string name="sort_salenum">销量</string>
    <string name="sort_price">价格</string>
    <string name="sort_filter">筛选</string>
    <string name="hint_search">请输入要搜索的商品</string>
    <string name="hint_comment">请输入评价</string>
    <string name="hint_cart_empty_nologin">登录后可同步电脑和手机购物车</string>
    <string name="hint_cart_empty_login">购物车没有商品, 去商城逛逛</string>
    <string name="hint_cart_empty_bottom">热卖商品实时更新, 常回来看看哦~</string>
    <string name="hint_empty_list_title">看看热卖</string>
    <string name="hint_search_keyword">请输入搜索关键词</string>
    <string name="product_details_spec">产品规格</string>
    <string name="product_details_attr">商品属性</string>
    <string name="product_details_detail">详情</string>
    <string name="product_details_comment">累计评价</string>
    <string name="product_details_like">已收藏</string>
    <string name="product_details_unlike">未收藏</string>
    <string name="product_add_cart">加入购物车</string>
    <string name="product_buy_now">立即购买</string>
    <string name="order_deliver_type">选择物流</string>
    <string name="order_coupon">优惠券</string>
    <string name="order_invoice">发票抬头</string>
    <string name="order_residue_balance">当前余额</string>
    <string name="order_goods_fee">商品总额</string>
    <string name="order_shopping_fee">运费</string>
    <string name="order_amount_fee">应付金额</string>
    <string name="order_coupon_hint">请输入优惠码</string>
    <string name="seler_message">买家留言</string>
    <string name="send_seler_message">(选填)请对本次交易说明</string>
    <string name="invoce_message">xx单位或xx个人</string>
    <string name="toast_no_ordersn_data">无订单数据</string>
    <string name="toast_no_coupon_category">没有优惠券分类数据</string>
    <string name="pay_money">支付金额</string>
    <string name="pay_wechat">微信支付</string>
    <string name="pay_alipay">支付宝支付</string>
    <string name="pay_cod">货到付款</string>
    <string name="go_home">回首页</string>
    <string name="look_order">查看订单</string>
    <string name="person_nickname">登录/注册</string>
    <string name="person_mine_order">我的订单</string>
    <string name="person_virtual_order">虚拟订单</string>
    <string name="person_all_order">查看全部订单</string>
    <string name="person_order_waitpay">待付款</string>
    <string name="person_order_waitsend">待发货</string>
    <string name="person_order_waitreceive">待收货</string>
    <string name="person_order_waitcomment">待评价</string>
    <string name="person_order_show">评价晒单</string>
    <string name="person_order_returned">退/换货</string>
    <string name="person_order_canceled">已取消</string>
    <string name="person_goods_collect">我的收藏</string>
    <string name="person_receive_address">收货地址</string>
    <string name="person_user_info">个人资料</string>
    <string name="person_integrate_detail">积分明细</string>
    <string name="person_coupon">我的优惠券</string>
    <string name="person_my_balance">我的余额</string>
    <string name="person_capital_manage">资金管理</string>
    <string name="person_about_us">关于我们</string>
    <string name="person_system_setting">系统设置</string>
    <string name="person_qr_code">我的二维码</string>
    <string name="person_feedback">意见反馈</string>
    <string name="person_fav">收藏</string>
    <string name="person_like">关注</string>
    <string name="person_unlike">取消关注</string>
    <string name="browsing_history">记录</string>
    <string name="set_pay_pwd">设置支付密码</string>
    <string name="person_consignee_name">收货人:</string>
    <string name="person_consignee_name_hit">请输入收货人姓名</string>
    <string name="person_consignee_phone">手机号码:</string>
    <string name="person_consignee_phone_hit">请输入手机号码</string>
    <string name="person_consignee_district">所在地区:</string>
    <string name="person_consignee_district_hit">选择所在地区</string>
    <string name="person_consignee_street">详细地址:</string>
    <string name="person_consignee_street_hit">输入详细地址:</string>
    <string name="person_consignee_default">设置为默认收货地址</string>
    <string name="address_add">+新建地址</string>
    <string name="address_edit">编辑地址</string>
    <string name="address_save">保存收货地址</string>
    <string name="hint_input_phone">请输入手机号码</string>
    <string name="hint_input_check_code">请输入短信验证码</string>
    <string name="hint_input_old_password">请输入旧密码</string>
    <string name="hint_input_password">请输入新密码</string>
    <string name="hint_input_repassword">请输入确认密码</string>
    <string name="count">数量</string>
    <string name="comment">评论</string>
    <string name="image_text_detail">图文详情</string>
    <string name="order_pay">去结算</string>
    <string name="coupon">优惠券</string>
    <string name="use">使用</string>
    <string name="ok">确定</string>
    <string name="change_to">切换</string>
    <string name="cancel">取消</string>
    <string name="settings">设置</string>
    <string name="exit">安全退出</string>
    <string name="province">省</string>
    <string name="city">市</string>
    <string name="district">区</string>
    <string name="town">镇</string>
    <string name="delete">删除</string>
    <string name="delete_history">删除历史记录</string>
    <string name="search_history">搜索历史</string>
    <string name="search">搜索</string>
    <string name="click_refresh">点击刷新</string>
    <string name="hot_search">热搜</string>
    <string name="apply_return">申请售后</string>
    <string name="apply_comment">去评价</string>
    <string name="submit_comment">提交评论</string>
    <string name="submit">提交</string>
    <string name="scan">扫一扫</string>
    <string name="location">城市</string>
    <string name="similar">看相似</string>
    <string name="contact_seller">联系卖家</string>
    <string name="check_all">全选</string>
    <string name="none">无</string>
    <string name="no_contact">无联系方式</string>
    <string name="no_install_qq">请先安装QQ应用</string>
    <string name="data_error">数据异常</string>
    <string name="toast_collect_success">成功收藏</string>
    <string name="toast_collect_cancel">取消收藏</string>
    <string name="toast_not_datal">请选择商品数量</string>
    <string name="toast_shopcart_action_success">购物车操作成功</string>
    <string name="toast_count_not_small_zero">"数量不能少于1"</string>
    <string name="toast_low_stocks">库存不足</string>
    <string name="toast_load_data">正在加载数据</string>
    <string name="toast_person_unlogin">请先登录</string>
    <string name="toast_address_nocompletion">地址信息不完整</string>
    <string name="error_private">密钥无效,请检查是否配置正确</string>
    <string name="error_category_id_null">商品分类ID为空!</string>
    <string name="title_spec">规格属性</string>
    <string name="title_product_detail">商品详情</string>
    <string name="title_consignee_list">收货人地址</string>
    <string name="title_collect">收藏</string>
    <string name="title_attention">关注</string>
    <string name="title_attention2">已关注</string>
    <string name="title_balance_points">积分金额明细</string>
    <string name="title_confirm_order">确认订单</string>
    <string name="title_product_list">商品列表</string>
    <string name="title_pay_completed">支付完成</string>
    <string name="title_pay_list">支付列表</string>
    <string name="title_logistic">物流</string>
    <string name="title_getcontent">获取内容</string>
    <string name="title_detail">订单详情</string>
    <string name="title_exchange_list">退换货列表</string>
    <string name="title_goods_promote">商品促销</string>
    <string name="title_consignee">收货地址</string>
    <string name="title_home">TPshop商城</string>
    <string name="title_brand_street">品牌街</string>
    <string name="title_push_message">消息列表</string>
    <string name="title_group">今日团购</string>
    <string name="title_integral">积分商城</string>
    <string name="title_flash_sale">抢购</string>
    <string name="title_modify_password">修改密码</string>
    <string name="toast_no_select_province">请先选择省份</string>
    <string name="toast_no_select_city">请先选择城市</string>
    <string name="toast_no_select_district">请先选择区县</string>
    <string name="toast_no_preview_district">请选择上级地区</string>
    <string name="login_title">登录</string>
    <string name="login_phone_number">账号</string>
    <string name="login_phone_number_null">请输入手机号码</string>
    <string name="login_password">密码</string>
    <string name="login_password_null">请输入密码</string>
    <string name="login_btn_login">登录</string>
    <string name="login_register">手机快速注册</string>
    <string name="login_forget_pwd">找回密码</string>
    <string name="forget_pwd_title">忘记密码</string>
    <string name="register_title">注册</string>
    <string name="forget_title">找回密码</string>
    <string name="register_phone_number">手机号码</string>
    <string name="register_phone_number_null">请输入手机号码</string>
    <string name="register_btn_next">下一步</string>
    <string name="integrall_buy">立即兑换</string>
    <string name="register_button">注册</string>
    <string name="register_btn_re_code_done">获取验证码</string>
    <string name="edit_code_null">请输入验证码</string>
    <string name="register_error_info">*密码和确认密码必须是字母大小写或数字，长度为6-16位</string>
    <string name="register_law_info">注册即视为同意《开源用户注册协议》</string>
    <string name="register_edit_digits" translatable="false">0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="find_pwd_accout">账号</string>
    <string name="find_pwd_accout_hint">用户名/邮箱/手机号</string>
    <string name="find_pwd_account_name">用户名：<xliff:g id="step_count">%1$s</xliff:g></string>
    <string name="find_pwd_customer_service">遇到问题？请联系客服</string>
    <string name="find_pwd_pwd_remark">备注：请将密码设置为6-20位，并且由字母，数字和字符两种以上组合，不能与旧密码相同</string>
    <string name="find_pwd_new_pwd_hint">6-20位，不能与旧密码相同</string>
    <string name="find_pwd_pwd_done">完成</string>
    <string name="find_pwd_new_pwd">请设置新的登录密码</string>
    <string name="find_pwd_second_title">请输入<xliff:g id="step_count">%1$s</xliff:g>收到的校验码  </string>
    <string name="withdraw_card_num">卡号</string>
    <string name="withdraw_card_num_hint">银行卡号</string>
    <string name="withdraw_card_ower">开户名</string>
    <string name="withdraw_card_ower_hint">持卡人姓名</string>
    <string name="withdraw_bank_name">银行名称</string>
    <string name="withdraw_bank_name_hint">如：工商银行</string>
    <string name="withdraw_bank_balance">提现金额</string>
    <string name="withdraw_bank_balance_hint">最多可提现金额：<xliff:g id="step_count">%1$s</xliff:g>元</string>
    <string name="withdraw_bank_code">验证码</string>
    <string name="withdraw_bank_code_hint">请输入验证码</string>
    <string name="withdraw_submit">提交申请</string>
</resources>