<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/find_pwd_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:id="@+id/layout_second"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/txt_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/find_pwd_second_title"
            android:textColor="#ffe23435"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_account_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txt_phone_number"
            android:layout_marginTop="40dp"
            android:text="@string/find_pwd_account_name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_verification_code"
            style="@style/edit_text"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txt_account_name"
            android:layout_marginTop="29dp"
            android:hint="@string/hint_input_check_code"
            android:inputType="number"
            android:maxLength="@integer/sms_check_code_length"
            android:paddingLeft="10dp" />

        <Button
            android:id="@+id/btn_verification_code"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_alignBottom="@+id/edit_verification_code"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/edit_verification_code"
            android:onClick="onBtnVerificationClick"
            android:text="@string/register_btn_re_code_done" />

        <ImageView
            android:id="@+id/img_clear_input_random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edit_verification_code"
            android:layout_alignRight="@+id/edit_verification_code"
            android:layout_alignTop="@+id/edit_verification_code"
            android:layout_marginRight="15dp"
            android:onClick="onClearVerificationClick"
            android:src="@drawable/icon_clear_input" />

        <Button
            android:id="@+id/btn_second_next"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/btn_verification_code"
            android:layout_marginTop="20dp"
            android:enabled="false"
            android:onClick="onSecondNextClick"
            android:text="@string/register_btn_next" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/btn_second_next"
            android:layout_marginTop="12dp"
            android:text="@string/find_pwd_customer_service" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_third"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="17dp"
            android:text="@string/find_pwd_new_pwd" />

        <EditText
            android:id="@+id/txt_new_pwd"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView11"
            android:layout_marginTop="19dp"
            android:hint="@string/find_pwd_new_pwd_hint"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingLeft="10dp" />

        <com.tpshop.mall.widget.SwitchButton
            android:id="@+id/btn_show_pwd"
            style="@style/SwitchButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txt_new_pwd"
            android:layout_alignParentRight="true"
            app:kswTintColor="@color/light_red" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txt_new_pwd"
            android:layout_marginTop="15dp"
            android:text="@string/find_pwd_pwd_remark" />

        <Button
            android:id="@+id/btn_done"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView12"
            android:layout_marginTop="25dp"
            android:enabled="false"
            android:onClick="onBtnDoneClick"
            android:text="@string/find_pwd_pwd_done" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/btn_done"
            android:layout_marginTop="34dp"
            android:text="@string/find_pwd_customer_service" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_first"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <EditText
            android:id="@+id/account_name"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_row"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/find_pwd_accout_hint"
            android:inputType="phone"
            android:paddingLeft="@dimen/dp_50" />

        <EditText
            android:id="@+id/check_code_edtv"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_row"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/account_name"
            android:layout_marginTop="24dp"
            android:hint="@string/edit_code_null"
            android:inputType="textVisiblePassword"
            android:maxLength="@integer/random_code_length"
            android:paddingLeft="10dp" />

        <Button
            android:id="@+id/btn_first_next"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/check_code_edtv"
            android:layout_marginTop="20dp"
            android:enabled="false"
            android:onClick="onFirstNextClick"
            android:text="@string/register_btn_next" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/check_code_edtv"
            android:layout_alignLeft="@+id/account_name"
            android:layout_alignStart="@+id/account_name"
            android:layout_alignTop="@+id/account_name"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/find_pwd_accout" />

        <ImageView
            android:id="@+id/txt_rand_code"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_first_next"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/check_code_edtv"
            android:onClick="onRandomCodeClick" />

        <ImageView
            android:id="@+id/img_clear_input"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_first_next"
            android:layout_alignTop="@+id/check_code_edtv"
            android:layout_toLeftOf="@+id/txt_rand_code"
            android:onClick="onClearRandomClick"
            app:srcCompat="@drawable/icon_clear_input" />
    </RelativeLayout>
</FrameLayout>
